[package]
name = "create_rust_lib_template"
version = "0.1.0"
authors = ["pefish <pefish@qq.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pefish/binance_connector_rust"
documentation = "https://github.com/pefish/binance_connector_rust"
homepage = "https://github.com/pefish/binance_connector_rust"
description = ""
exclude = ["docs", "/.travis.yml", "/appveyor.yml", ".gitignore"]
autobenches = true
edition = "2018"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.56"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rust_decimal = "1.25.0"
serde = { version = "1.0.137", features = ["derive"] }


[[example]]
name = "test"
path = "examples/test.rs"


