[package]
name = "block_until_sigint"
version = "0.1.0"
authors = ["pefish <pefish@qq.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pefish/rust-pefish-lib"
documentation = "https://github.com/pefish/rust-pefish-lib"
homepage = "https://github.com/pefish/rust-pefish-lib"
description = "A simple easy to use wrapper around Ctrl-C signal."
exclude = ["docs", "/.travis.yml", "/appveyor.yml", ".gitignore"]
autobenches = true
edition = "2018"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.56"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.13"
futures = "0.3.21"
log = "0.4.14"
